k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.org/websocket-services: ws-server
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web-chart
              servicePort: 80
